# vmw_backdoor-rs

./: .travis.yml  COPYRIGHT  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: rust.yml
docs/: development.md  release-notes.md
examples/: check-backdoor.rs  get-guestinfo.rs  log.rs  report-agent.rs
src/: backdoor.rs  erpc.rs  error.rs  lib.rs  low_bw.rs
src/asm/: mod.rs  x86_64-linux.s
