[package]
name = "vmw_backdoor"
version = "0.2.4"
authors = ["Luca BRUNO <lucab@lucabruno.net>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coreos/vmw_backdoor-rs"
documentation = "https://docs.rs/vmw_backdoor"
description = 'A pure-Rust library for VMware host-guest protocol ("VMXh backdoor")'

[dependencies]
cfg-if = "^1.0"
libc = "^0.2"
errno = ">= 0.2, < 0.4"
log = "^0.4"
thiserror = "^1.0"

[build-dependencies]
cc = "^1.0"

[package.metadata.release]
pre-release-commit-message = "cargo: release {{version}}"
publish = false
push = false
sign-commit = true
sign-tag = true
tag-message = "release {{version}}"
